--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -5,9 +5,15 @@
         <p>Please read the installation guidelines here: <a href="http://code.google.com/p/css-x-fire/wiki/Installation">http://code.google.com/p/css-x-fire/wiki/Installation</a></p>
         <p>Style with pleasure!</p>
     ]]></description>
-    <version>1.33</version>
+    <version>1.34</version>
     <vendor url="https://github.com/ronniekk/css-x-fire" email="ronnie.kolehmainen at gmail.com">Ronnie Kolehmainen</vendor>
     <change-notes><![CDATA[
+        <ul>1.34
+            <li>Compiled for IDE build 125.57.</li>
+            <li>
+                <a href="https://github.com/ronniekk/css-x-fire/issues/23">Issue 23</a> Internal Error: NullPointerException
+            </li>
+        </ul>
         <ul>1.33
             <li>Compiled for IDE build 126.92.</li>
             <li>
@@ -154,7 +160,7 @@
         </ul>
     ]]>
     </change-notes>
-    <idea-version since-build="126.92"/>
+    <idea-version since-build="125.57"/>
     <depends>com.intellij.modules.lang</depends>
     <depends>com.intellij.css</depends>
     <depends optional="true">org.jetbrains.plugins.less</depends>
