--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -11,6 +11,9 @@
         <ul>1.34
             <li>Compiled for IDE build 125.57.</li>
             <li>
+                <a href="https://github.com/ronniekk/css-x-fire/issues/22">Issue 22</a>,
+                <a href="https://github.com/ronniekk/css-x-fire/issues/25">Issue 25</a> Darcula support.
+            <li>
                 <a href="https://github.com/ronniekk/css-x-fire/issues/23">Issue 23</a> Internal Error: NullPointerException
             </li>
         </ul>
