--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -5,9 +5,12 @@
         <p>Please read the installation guidelines here: <a href="http://code.google.com/p/css-x-fire/wiki/Installation">http://code.google.com/p/css-x-fire/wiki/Installation</a></p>
         <p>Style with pleasure!</p>
     ]]></description>
-    <version>1.37</version>
+    <version>1.38</version>
     <vendor url="https://github.com/ronniekk/css-x-fire" email="ronnie.kolehmainen at gmail.com">Ronnie Kolehmainen</vendor>
     <change-notes><![CDATA[
+        <ul>1.38
+            <li>Compiled for IDE build 138.</li>
+        </ul>
         <ul>1.37
             <li>Compiled for IDE build 129.</li>
         </ul>
@@ -177,7 +180,7 @@
         </ul>
     ]]>
     </change-notes>
-    <idea-version since-build="129.1"/>
+    <idea-version since-build="138.1"/>
     <depends>com.intellij.modules.lang</depends>
     <depends>com.intellij.css</depends>
     <depends optional="true">org.jetbrains.plugins.less</depends>
